# dino

./: meson.build
pixmaps/: meson.build
src/: config.hpp.meson  meson.build
src/gui/: meson.build  noteeditor.cpp  ruler.cpp  tempowidget.cpp  trackwidget.cpp
src/libdinoseq/: meson.build  patternselection.cpp  ringbuffer.hpp  sequencer.cpp  song.cpp  song.hpp  track.cpp
